--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -2,3 +2,17 @@
     border-bottom: 1px solid lightgrey;
     padding: 20px !important;
 }
+
+.todo__btn {
+    margin-left: 20px !important;
+}
+
+.todo__input {
+    padding: 10px;
+    border-radius: 15px;
+    border: none;
+}
+
+.todo__update {
+    margin: 30px 0;
+}
